force-app/main/default/objects/Associated_Partner__c/Associated_Partner__c.object-meta.xml
<CustomObject>
    <description>Junction Object that Associates Opportunity, Implementation, Plan, and Transition to Account</description>
    <label>Associated Partner</label>
    <nameField>
        <label>Associated Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>