force-app/main/default/objects/Associated_Partner__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>TEXT(Account__r.Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>