force-app/main/default/objects/Associated_Partner__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Associated Partners</relationshipLabel>
    <relationshipName>Associated_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>