force-app/main/default/objects/Associated_Partner__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <formula>TEXT( Implementation__r.Implementation_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Status</label>
    <type>Text</type>
</CustomField>