force-app/main/default/objects/Associated_Partner__c/fields/Partner_Role__c.field-meta.xml
<CustomField>
    <fullName>Partner_Role__c</fullName>
    <label>Partner Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3(38)</fullName>
            </value>
            <value>
                <fullName>CPA Firm</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Firm</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Firm (Referral Only)</fullName>
            </value>
            <value>
                <fullName>Financial Institution Partner</fullName>
            </value>
            <value>
                <fullName>HCM Provider</fullName>
            </value>
            <value>
                <fullName>Interested Third Party</fullName>
            </value>
            <value>
                <fullName>Law Office</fullName>
            </value>
            <value>
                <fullName>Payroll Integrator</fullName>
            </value>
            <value>
                <fullName>Payroll Provider</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
                <isActive>false</isActive>
                <label>Referrer</label>
            </value>
            <value>
                <fullName>Referrer/Wholesaler</fullName>
            </value>
            <value>
                <fullName>Referring Partner</fullName>
            </value>
            <value>
                <fullName>TPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>