force-app/main/default/objects/Associated_Partner__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Associated Partners</relationshipLabel>
    <relationshipName>Associated_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>