force-app/main/default/objects/Associated_Partner__c/fields/Primary_Partner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Partner</label>
    <type>Checkbox</type>
</CustomField>