force-app/main/default/objects/Associated_Partner__c/fields/Transition__c.field-meta.xml
<CustomField>
    <fullName>Transition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transition</label>
    <referenceTo>Transition__c</referenceTo>
    <relationshipLabel>Associated Partners</relationshipLabel>
    <relationshipName>Associated_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>